...G...PS. [ZBXNEXT-4836] added license information and OpenSSL linking exception to README file, show crypto library version when started with '-V' (Andris)
.......PS. [ZBXNEXT-4782] improve out of memory error message by adding statistics and backtrace; improve something impossible has just happened error message by adding backtrace (vso)

Bug fixes:
........S. [ZBX-15022] fixed shared memory leak during configuration cache synchronization (wiper)
..F....... [ZBX-13505] fixed link coloring in map when related trigger is not monitored (miks)
..F....... [ZBX-14934] made widget specific javascript files to be loaded with jsLoader (miks)
....I..... [ZBX-14966] removed the notes about sqlite from zabbix_server.conf (MVekslers)
........S. [ZBX-14875] fixed discovery and auto registration escalations being kept for one hour instead of deleted immediately (vso)
A.F....... [ZBX-14422] fixed SQL queries being logged when accessing API, even if debug mode is disabled (agriscenko)
...G...PS. [ZBX-15027] fixed startup failures due to orphaned or zombie processes remaining when zabbix daemon is terminated during startup (vso)
A......... [ZBX-14396] fixed memory usage during template full clone (gcalenko, Sasha)
...G...... [ZBX-14779] extended support of system.stat[ent], system.stat[cpu,pc], system.stat[cpu,ec] on IBM AIX to LPAR type 'dedicated' (Andris)
........S. [ZBX-14851] fixed the host visible name in the event details/messages from server when using long utf8 text (MVekslers)
.......P.. [ZBX-14887] fixed max count of records in the single json that proxy can send to the server (MVekslers)
.......PS. [ZBX-14972] fixed the case where data from non-monitored VMware services are not removed from vmware cache (MVekslers)
...G...PS. [ZBX-14856] added support for OpenSSL 1.1.1 (Andris)
.D.G...PS. [ZBX-14971] added note on runtime control with PID numbers larger than 65535 to server, proxy and agentd help messages and man pages (Andris)