@@ -6,6 +6,7 @@ New features:
 .......PS. [ZBXNEXT-4782] improve out of memory error message by adding statistics and backtrace; improve something impossible has just happened error message by adding backtrace (vso)
 
 Bug fixes:
+..F....... [ZBX-14691] fixed faulty behaviour of mandatory fields in Trigger expression form (vasilijs)
 ........S. [ZBX-15022] fixed shared memory leak during configuration cache synchronization (wiper)
 ..F....... [ZBX-13505] fixed link coloring in map when related trigger is not monitored (miks)
 ..F....... [ZBX-14934] made widget specific javascript files to be loaded with jsLoader (miks)
@@ -1395,6 +1396,7 @@ New features:
 ...G...PS. [ZBXNEXT-4836] added license information and OpenSSL linking exception to README file, show crypto library version when started with '-V' (Andris)
 
 Bug fixes:
+..F....... [ZBX-14691] fixed faulty behaviour of mandatory fields in Trigger expression form (vasilijs)
 ..F....... [ZBX-13505] fixed link coloring in map when related trigger is not monitored (miks)
 .......PS. [ZBX-14953] fixed not closed connection with vmware at the end of update session via a call to Logout() (MVekslers)
 ....I..... [ZBX-14966] removed the notes about sqlite from zabbix_server.conf (MVekslers)
